<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="?actionBarSize"
            android:text="@string/registro"
            android:textColor="@color/colorBlanco"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_imagen"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/colorBlanco"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlanco"
            android:textColor="@color/colorBlanco"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textColor="@color/colorBlanco"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlanco"
            android:inputType="number"
            android:textColor="@color/colorBlanco"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicio"
            android:textColor="@color/colorBlanco"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_servicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlanco"
            android:textColor="@color/colorBlanco"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorBoton"
            android:padding="20dp"
            android:text="@string/registrarse"
            android:textColor="@color/colorBlanco"/>
    </LinearLayout>

</LinearLayout>